# ttexplore

./: .gitignore  CMakeLists.txt  README.md
harness/1/: harness.cpp
harness/2/: harness.cpp
harness/3/: harness.cpp
harness/4/: harness.cpp
harness/5/: harness.cpp
harness/6/: harness.cpp
lib/: routines.cpp  routines.hpp  ttexplore.cpp  ttexplore.hpp
